# BasicCalculatorAgent

./: .gitignore  Makefile  README.md  pyproject.toml
src/basic_calculator/: agent.py  config.py
src/basic_calculator/tools/: math_tools.py
